--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,6 @@
     "js-cookie": "^3.0.5",
     "overlay-navbar": "^1.2.3",
     "react": "^18.3.1",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.3.1",
@@ -30,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "react-use": "^17.5.1",
